--- a/FietsTracker/FietsTracker/FietsTracker/FietsTracker.csproj
+++ b/FietsTracker/FietsTracker/FietsTracker/FietsTracker.csproj
@@ -32,8 +32,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BicycleBin.cs" />
+    <Compile Include="BicycleBinRepository.cs" />
+    <Compile Include="Database.cs" />
+    <Compile Include="IDataModel.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Robbery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RobberyRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="SQLite-net, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
