--- a/FietsTracker/FietsTracker/FietsTracker/FietsTracker.csproj
+++ b/FietsTracker/FietsTracker/FietsTracker/FietsTracker.csproj
@@ -32,12 +32,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BicycleBin.cs" />
+    <Compile Include="BicycleBinManager.cs" />
     <Compile Include="BicycleBinRepository.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="IDataModel.cs" />
+    <Compile Include="IManager.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Robbery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RobberyManager.cs" />
     <Compile Include="RobberyRepository.cs" />
   </ItemGroup>
   <ItemGroup>
