Proof that it works

--- a/FietsTracker/FietsTracker/FietsTracker.Droid/FietsTracker.Droid.csproj
+++ b/FietsTracker/FietsTracker/FietsTracker.Droid/FietsTracker.Droid.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\raw\fietsdb.db" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
