--- a/FietsTracker/FietsTracker/FietsTracker/FietsTracker.csproj
+++ b/FietsTracker/FietsTracker/FietsTracker/FietsTracker.csproj
@@ -32,15 +32,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BicycleBin.cs" />
-    <Compile Include="BicycleBinManager.cs" />
-    <Compile Include="Database.cs" />
+    <Compile Include="GenericDatabase.cs" />
+    <Compile Include="GenericManager.cs" />
+    <Compile Include="IDatabase.cs" />
     <Compile Include="GenericRepository.cs" />
     <Compile Include="IDataModel.cs" />
     <Compile Include="IManager.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Robbery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RobberyManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="SQLite-net, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
